--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.2.0",
+    "react-helmet": "^5.0.3",
     "sass-loader": "^4.1.1"
   }
 }
