--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   "license": "MIT",
   "dependencies": {
     "animate.css": "^3.5.2",
-    "autoprefixer": "6.7.6",
-    "babel-plugin-module-resolver": "2.5.0",
+    "autoprefixer": "7.2.3",
+    "babel-plugin-module-resolver": "3.0.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
-    "bulma": "^0.4.2",
-    "glob": "7.1.1",
-    "next": "3.0.1-beta.13",
+    "bulma": "^0.6.1",
+    "glob": "7.1.2",
+    "next": "4.2.1",
     "node-sass": "^4.4.0",
-    "normalize.css": "5.0.0",
+    "normalize.css": "7.0.0",
     "parallax-js": "git+https://github.com/wagerfield/parallax.git",
-    "postcss-easy-import": "2.0.0",
-    "postcss-loader": "1.3.3",
+    "postcss-easy-import": "3.0.0",
+    "postcss-loader": "2.0.9",
     "raw-loader": "^0.5.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-ga": "^2.2.0",
     "react-helmet": "^5.0.3",
-    "sass-loader": "^4.1.1"
+    "sass-loader": "^6.0.6"
   }
 }
